--- a/.gitignore
+++ b/.gitignore
@@ -145,5 +145,9 @@ docker-compose.override.yml
 # local configuration files
 config/local*.*
 
-#mocha reports
+# mocha reports
 mochawesome-report
+
+# exclude the .env file to prevent sensitive information
+# from being committed
+.env
