--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test-9.4": "mocha --exit --timeout 10000 test/models/db.test.js test/models/env.test.js",
     "test-9.5": "mocha --exit --timeout 10000 --recursive test/models",
     "test-9.6": "mocha --require test/setup.test.js --ignore 'test/8.4/**/*.js' --ignore 'test/8.5/**/*.js' --ignore 'test/8.6/**/*.js' --ignore 'test/9.2/**/*.js' --ignore 'test/auth/**/*.js'",
-    "test": "mocha --require test/setup.test.js --ignore 'test/8.4/**/*.js' --ignore 'test/8.5/**/*.js' --ignore 'test/8.6/**/*.js' --ignore 'test/9.2/**/*.js'"
+    "test": "mocha --require test/setup.test.js --ignore 'test/8.4/**/*.js' --ignore 'test/8.5/**/*.js' --ignore 'test/8.6/**/*.js' --ignore 'test/9.2/**/*.js'",
+    "test-own": "mocha --exit --timeout 10000 test/own/dbUtils.test.js test/own/productsUtils.test.js"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +38,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
-    "mongoose": "^5.10.10"
+    "mongodb": "^6.2.0",
+    "mongoose": "^5.13.21"
   }
 }
