--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test-9.5": "mocha --exit --timeout 10000 --recursive test/models",
     "test-9.6": "mocha --require test/setup.test.js --ignore 'test/8.4/**/*.js' --ignore 'test/8.5/**/*.js' --ignore 'test/8.6/**/*.js' --ignore 'test/9.2/**/*.js' --ignore 'test/auth/**/*.js'",
     "test": "mocha --require test/setup.test.js --ignore 'test/8.4/**/*.js' --ignore 'test/8.5/**/*.js' --ignore 'test/8.6/**/*.js' --ignore 'test/9.2/**/*.js'",
-    "test-own": "mocha --require test/setup.test.js --timeout 10000 test/own/dbUtils.test.js test/own/productsUtils.test.js"
+    "test-own": "mocha --require test/setup.test.js test/own"
   },
   "keywords": [],
   "author": "",
